# egui_tracing

egui-tracing/: Cargo.toml
egui-tracing/src/: lib.rs  string.rs
egui-tracing/src/tracing/: collector.rs  event.rs  level_filter.rs  mod.rs
egui-tracing/src/ui/: mod.rs  state.rs
egui-tracing/src/ui/components/: level_menu_button.rs  mod.rs  table.rs  target_menu_button.rs
